o Added jaxp 1.4.2 to the jomc-logging-it assembly and updated README file.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-logging/trunk@1656 aee2edba-5628-49ba-b8b8-0e9d4ac63d57